--- a/mscore/inspector/inspector_articulation.ui
+++ b/mscore/inspector/inspector_articulation.ui
@@ -175,7 +175,7 @@
         </sizepolicy>
        </property>
        <property name="text">
-        <string>Time Stretch</string>
+        <string>Time stretch</string>
        </property>
       </widget>
      </item>
