--- a/mscore/inspector/inspector_line.ui
+++ b/mscore/inspector/inspector_line.ui
@@ -72,7 +72,7 @@
         </sizepolicy>
        </property>
        <property name="text">
-        <string>Line Color</string>
+        <string>Line color</string>
        </property>
       </widget>
      </item>
@@ -99,21 +99,21 @@
      <item row="3" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
-        <string>Line Width</string>
+        <string>Line width</string>
        </property>
       </widget>
      </item>
      <item row="4" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>Line Style</string>
+        <string>Line style</string>
        </property>
       </widget>
      </item>
      <item row="0" column="0" colspan="2">
       <widget class="QCheckBox" name="diagonal">
        <property name="text">
-        <string>Allow Diagonal</string>
+        <string>Allow diagonal</string>
        </property>
       </widget>
      </item>
