--- a/mscore/inspector/inspector_timesig.ui
+++ b/mscore/inspector/inspector_timesig.ui
@@ -98,7 +98,7 @@
         </sizepolicy>
        </property>
        <property name="text">
-        <string>Show Courtesy</string>
+        <string>Show courtesy</string>
        </property>
       </widget>
      </item>
