--- a/mscore/palette.ui
+++ b/mscore/palette.ui
@@ -53,7 +53,7 @@
      <item row="0" column="1">
       <widget class="QLabel" name="label_3">
        <property name="text">
-        <string>width:</string>
+        <string>Width:</string>
        </property>
       </widget>
      </item>
@@ -70,7 +70,7 @@
      <item row="0" column="3">
       <widget class="QLabel" name="label_4">
        <property name="text">
-        <string>height:</string>
+        <string>Height:</string>
        </property>
       </widget>
      </item>
@@ -138,7 +138,7 @@
      <item>
       <widget class="QCheckBox" name="moreElements">
        <property name="text">
-        <string>show 'more Elements'</string>
+        <string>Show 'more Elements'</string>
        </property>
       </widget>
      </item>
