--- a/mscore/excerptsdialog.ui
+++ b/mscore/excerptsdialog.ui
@@ -26,7 +26,7 @@
       <item row="0" column="0">
        <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>Part Title:</string>
+         <string>Part title:</string>
         </property>
        </widget>
       </item>
