--- a/mscore/inspector/inspector_keysig.ui
+++ b/mscore/inspector/inspector_keysig.ui
@@ -86,14 +86,14 @@
      <item row="1" column="0">
       <widget class="QCheckBox" name="showCourtesy">
        <property name="text">
-        <string>Show Courtesy</string>
+        <string>Show courtesy</string>
        </property>
       </widget>
      </item>
      <item row="2" column="0">
       <widget class="QCheckBox" name="showNaturals">
        <property name="text">
-        <string>Show Natural</string>
+        <string>Show naturals</string>
        </property>
       </widget>
      </item>
