--- a/mscore/inspector/inspector_marker.ui
+++ b/mscore/inspector/inspector_marker.ui
@@ -154,7 +154,7 @@
      <item row="0" column="0">
       <widget class="QLabel" name="label_3">
        <property name="text">
-        <string>Marker Type</string>
+        <string>Marker type</string>
        </property>
       </widget>
      </item>
