--- a/mscore/voltaproperties.ui
+++ b/mscore/voltaproperties.ui
@@ -56,7 +56,7 @@
           <item row="1" column="0">
            <widget class="QLabel" name="label_2">
             <property name="text">
-             <string>Repeat List:</string>
+             <string>Repeat list:</string>
             </property>
            </widget>
           </item>
